update swagger content, typeorm, pg connection, tsyringe
